src/tripviewer/deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer
spec:
  selector: # Define the wrapping strategy
    matchLabels: # Match all pods with the defined labels
      app: tripviewer # Labels follow the `name: value` template
  template: # This is the template of the pod inside the deployment
    metadata:
      labels:
        app: tripviewer
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - image: acrchallenge01.azurecr.io/challenge/tripviewer
          name: tripviewer
          ports:
            - containerPort: 80
              name: http
